--- a/src/content/blog/2018/he-dejado-facebook/index.mdx
+++ b/src/content/blog/2018/he-dejado-facebook/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: He dejado de usar Facebook. ¿Y ahora qué?
 pubDate: 2018-01-05
-slug: 2018/01/05/he-dejado-facebook/
+slug: /he-dejado-facebook
 heroImage: ./facebook.jpeg
 ---
 
