--- a/src/content/blog/2018/Cosas-que-he-aprendido-de-un-cancer/index.mdx
+++ b/src/content/blog/2018/Cosas-que-he-aprendido-de-un-cancer/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cosas que he aprendido de un cáncer
 pubDate: 2018-12-08
-slug: 2018/12/08/Cosas-que-he-aprendido-de-un-cancer/
+slug: /Cosas-que-he-aprendido-de-un-cancer
 heroImage: ./linfoma_1.jpg
 ---
 
@@ -26,7 +26,7 @@ Como decía un amigo: "Nos hemos pegado buen galleto, pero ¿y lo que nos hemos 
 
 5. **Si quieres aprendes** mogollón de cosas: Medicamentos, síntomas, funcionamiento del cuerpo, tratamientos, pruebas diagnoóticas, etc. Si además tienes un grupo de oncólogos como los que me llevan a mí, ellos te indican donde buscar más info, y eso mola mucho.
 
-6. En mi caso, un Linfoma se considera un cáncer de la sangre, es un crecimiento desmedido de los linfocitos que se acumulan en los ganglios haciendo que crezcan de forma desmesuradas, comprimiendo otros órganos. Como el sistema linfático se considera un único órgano el hecho de que se detecten células tumorales en distintos ganglios lejos unos de otros por el cuerpo NO se considera metástasis.
+6. En mi caso, un Linfoma se considera un cáncer de la sangre, es un crecimiento desmedido de los linfocitos que se acumulan en los ganglios haciendo que crezcan de forma desmesurada, comprimiendo otros órganos. Como el sistema linfático se considera un único órgano el hecho de que se detecten células tumorales en distintos ganglios lejos unos de otros por el cuerpo NO se considera metástasis.
 
 7. Del punto 1 se puede extraer que **el tratamiento de cada cáncer es también un mundo**, no hay soluciones genéricas, incluso para el mismo cáncer. Y las quimioterapias no tiene por que ser medicamentos "raros", por ejemplo una parte del "mio" es la _[prednisona](https://es.wikipedia.org/wiki/Prednisona)_ que tiene unos usos médicos más allá del cáncer.
 
