--- a/src/content/blog/2022/2022-12-31-2022-in-a-nutshell/index.mdx
+++ b/src/content/blog/2022/2022-12-31-2022-in-a-nutshell/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: '2022 in a Nutshell'
 pubDate: 2022-12-31
-slug: 2022-in-a nutshell
+slug: /2022-in-a-nutshell
 heroImage: ./moritz-knoringer-4_MwbIq0CME-unsplash.jpg
 tags:
   - lifestyle
