--- a/src/content/blog/2022/generics-in-go-1-18/index.mdx
+++ b/src/content/blog/2022/generics-in-go-1-18/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Generics in Golang 1.18'
 pubDate: 2022-02-28
-slug: generics-in-golang-1.18/
+slug: /generics-in-go-1-18
 heroImage: ./go-generics-4016522.jpg
 tags:
   - golang
