--- a/src/content/blog/2011/websites-para-moviles/index.mdx
+++ b/src/content/blog/2011/websites-para-moviles/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Websites para móviles'
 pubDate: 2011-04-29
-slug: 2011/04/29/websites-para-moviles/
+slug: /websites-para-moviles
 heroImage: ./table-1100252_1920.jpg
 ---
 
