--- a/src/content/blog/2017/algo-se-mueve-en-vigo/index.mdx
+++ b/src/content/blog/2017/algo-se-mueve-en-vigo/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Algo se mueve en Vigo'
 pubDate: 2017-03-03
-slug: algo-se-mueve-en-vigo
+slug: /algo-se-mueve-en-vigo
 heroImage: ./pexels-photo-209728.jpeg
 ---
 
