--- a/src/content/blog/2017/vigo-hace-pina/index.mdx
+++ b/src/content/blog/2017/vigo-hace-pina/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Vigo hace piña'
 pubDate: 2017-05-04
-slug: 2017/05/04/vigo-hace-pina/
+slug: /vigo-hace-pina
 heroImage: ./pexels-photo-244538.jpeg
 ---
 
