--- a/src/content/blog/2019/haciendo-cafe/index.mdx
+++ b/src/content/blog/2019/haciendo-cafe/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Haciendo café: simple análisis de costes'
 pubDate: 2019-04-27 11:44:20
-slug: 2019/04/27/haciendo-cafe/
+slug: /haciendo-cafe
 heroImage: ./cafe.jpg
 ---
 
