--- a/src/content/blog/2019/php-reflection/index.mdx
+++ b/src/content/blog/2019/php-reflection/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'PHP Reflection: Anotaciones, PHPDoc y mucho más'
 pubDate: 2019-11-01
-slug: 2019/11/01/php-reflection/
+slug: /php-reflection
 heroImage: ./php-reflection-949215.jpg
 ---
 
