--- a/src/content/blog/2020/js-loop/index.mdx
+++ b/src/content/blog/2020/js-loop/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Understanding Javascript's event loop: Macrotasks and microtasks"
 pubDate: 2020-04-27
-slug: 2020/04/27/js-loop/
+slug: /js-loop
 tags:
   - js
 heroImage: ./js-event-loop-106155.jpg
