--- a/src/content/blog/2020/why-i-write-a-blog/index.mdx
+++ b/src/content/blog/2020/why-i-write-a-blog/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Why I write a blog
 pubDate: 2020-07-15
-slug: 2020/07/15/why-i-write-a-blog/
+slug: /why-i-write-a-blog
 heroImage: ./why-i-write-a-blog-977931.jpg
 ---
 
