--- a/src/content/blog/2025/2025-06-23-release-please/index.mdx
+++ b/src/content/blog/2025/2025-06-23-release-please/index.mdx
@@ -3,6 +3,9 @@ title: 'Automating package version bump with Release Please'
 pubDate: 2025-06-30
 slug: /release-please
 heroImage: ./cover.png
+heroImageMeta:
+  author: "ChatGPT"
+  prompt: "Image of a staircase seen from the side, going up from left to right, with a point showing a trajectory using a dotted line of jumps to climb the steps. It should be colorful, with a gradient from pastel green to blue, and photorealistic. The format must be 16:9, and the ball should emit some light."
 tags:
  - ci
  - release
