--- a/src/content/blog/2010/musica-invisible/index.mdx
+++ b/src/content/blog/2010/musica-invisible/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Música invisible'
 pubDate: 2010-11-26
-slug: 2010/11/26/musica-invisible/
+slug: musica-invisible
 heroImage: ./musica-invisible.jpeg
 pexelsId: 96857
 tags:
