--- a/src/content/blog/2011/spam-social/index.mdx
+++ b/src/content/blog/2011/spam-social/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Spam Social'
 pubDate: 2011-04-07
-slug: 2011/04/07/spam-social/
+slug: /spam-social
 heroImage: ./5473611430_867ebc8ba3.jpg
 ---
 
