--- a/src/content/blog/2017/introduccion-vuejs/index.mdx
+++ b/src/content/blog/2017/introduccion-vuejs/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Introducción a Vue.js'
 pubDate: 2017-03-15
-slug: 2017/03/15/introduccion-vuejs/
+slug: /introduccion-vuejs
 heroImage: ./pexels-photo-196160.jpeg
 ---
 
