--- a/src/content/blog/2019/instagram-rbg/index.mdx
+++ b/src/content/blog/2019/instagram-rbg/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Instagram RGB Project'
 pubDate: 2019-12-23
-slug: 2019/12/23/instagram-rbg/
+slug: /instagram-rbg
 heroImage: ./ig-cover.jpg
 ---
 
