--- a/src/content/blog/2017/introduccion-vuejs/index.mdx
+++ b/src/content/blog/2017/introduccion-vuejs/index.mdx
@@ -59,7 +59,7 @@ Lo que vemos aquí, es un ejemplo básico del _data binding_, al crear la instan
 - `el`: es el punto de montaje de **Vue**, normalmente es un div con el id *#app*
 - `data`: debe ser una función que devuelva las variables que se van a *bindear**, **\_en nuestro ejemplo _name*
 
-En el *input* vemos el atributo *v-model* que indica a **Vue** el nombre de la variable que se *bindeará*, funcionando en ambos sentidos, si modificamos en cualquier lugar el valor del *name* se modificará en el input (y en todos los lugares donde se referencie) y si modificamos el valor del input el valor de *name* se modificará en todos los lugares, por ejemplo en el <span> *{{ name }}* </span>
+En el *input* vemos el atributo *v-model* que indica a **Vue** el nombre de la variable que se *bindeará*, funcionando en ambos sentidos, si modificamos en cualquier lugar el valor del *name* se modificará en el input (y en todos los lugares donde se referencie) y si modificamos el valor del input el valor de *name* se modificará en todos los lugares, por ejemplo en el `<span> *{{ name }}* </span>`
 
 Como ves en unas pocas y sencillas líneas hemos puesto a funcionar **Vue.js**, obviamente este es un ejemplo casi trivial, y **Vue.js** es mucho más que esto, se pueden crear aplicaciones complejas con facilidad y en poco tiempo.
 
