--- a/src/content/blog/2025/2025-07-30-adesign-system-team/index.mdx
+++ b/src/content/blog/2025/2025-07-30-adesign-system-team/index.mdx
@@ -29,17 +29,17 @@ No, depending on the size of your company and the complexity of your product, yo
 
 But if you have a complex product, or a large team, then it is worth to have a dedicated design system team to ensure that the design system is well-maintained, up-to-date, and aligned with the product's goals.
 
-A design system is a commodity, but it doesn't mean it is not important:
+**A design system is a kind of commodity**, but it doesn't mean it is not **important**:
 
-- It means, it has no value by itself, it needs to be used by the product teams to create value. 
+- It means it has no value by itself, it needs to be used by the product teams to create value. 
 
-- It doesn't mean you can not put attention or resources on it. In fact, investing in the design system can lead to significant long-term benefits for the entire organization.
+- It doesn't mean you should not put attention or resources on it. In fact, investing in the design system can lead to significant long-term benefits for the entire organization.
 
 As a similarity we can think of electricity: it is a commodity, but it is essential for the functioning of many products and services if the supply is not good it will be hard to create good products or they will be not usable if the supply fails. A design system is like electricity, it is a commodity that provides the foundation for building products and services and needs to be good to create nice productś.
-  
+
 ## Goals of a design system team
 
-**The main goal of a design system team is freeing up product teams from non-product-related tasks. Letting them focus on building features and solving user problems.**
+**The main goal of a design system team is freeing up product teams from non-product-related tasks. Letting them focus on building product related features and solving user problems.**
 
 They should not worry about (or solve common) design tokens, components, patterns, or workflows. Each second they spend on those tasks is a second they are not spending creating a better product.
 
@@ -55,6 +55,41 @@ The goals of a dedicated design system team can vary depending on the company an
 
 - **Define the workflows**: How the user should create a new element, what are the steps to follow, how to handle errors and show errors, etc. 
 
+
+## Clients of the design system team
+
+In a **product team**, the client of of the delivery is clear, is the **customer**, or the people who use the application, In a **platform team**, the clients are the **engineering teams**. In a **Design System team**, the clients are both, the **customers** (because are the ones that consume and use the components, patterns and workflows) and the **product teams (product managers, engineers and designers)** as they creates the product based in the components, patterns and workflows the design system team provides.
+
+This is very important, because as a design system team, you need to understand the needs of both the customers and the product teams. You need to create components, patterns and workflows that are easy to use, flexible and customizable, but also meet the needs of the customers.
+
+
+## Legacy and consistence
+
+Unless you are creating a new design system before to create the product (something that is not common), you will have to deal with legacy components, patterns and workflows, not necessary part of a formal design system, maybe created to cover an specific need at an specific time.
+
+Make the migration to a new design system is not a one shot task, you can not freeze the product for weeks and months to migrate all the components, patterns and workflows. You need to do it gradually, and causing visual and user experience inconsistencies in the product. **There are no magic solution to this, we can minimize the incosistences in the time and in cuantity, but we can not eliminate them**.
+
+- **One strategy is to work first on the new components** (in design and frontend) and replace the ones have a (more or less) 1:1 match with the old components. For example, the buttons, inputs, modals, etc. You need to know the real world is not perfect and usally the new components doesn't match 1:1 with the old ones, you need to define an strategy to create a catalog of the use cases of the old components and how to migrate them to the new ones (note: not migrate a behavior can be an aceptable solution).
+
+This strategy allows to remote completely some old components, but requires time to create the new components, before replace them, and you are not getting feedback of the new components until they are used in ALL the product, and it creates horizontal inconsistencies (across all the application pages/views).
+
+One advantage of this is that you can use codmods to migrate the old components "automatically" (not completely, because maybe the old component uses runtime calculated properties that are hard to migrate via codmods but to help with the process).
+
+AI agents can complement the deterministic codmods, and they are also very helpful in this process, as they can assist in understanding the context and making decisions about the migration following your migration prompt.
+
+For the components don't match 1:1 with the new ones, for the patterns and workflows, you can do the same: Replace them gradually, but in this case the migraction needs more understanding of the context and the use cases, so you need to work closely with the product teams to understand their needs and how to migrate the components, patterns and workflows, and again you are not getting to much feedback until the migration is done.
+
+- Another strategy is **to work with a product team, for an specific page or workflows, and think how to migrate them together.** creating the new component, patterns and workflow during this process. The output of this process is not a final design system (not all the necessary components, patterns and workflows are created yet), it will be a page that follows completely the new design system (components, patterns and workflows), but you will have a bunch of them, and you can use them in the next page to migrate, a page that will need more components, patterns and workflows... This is a more iterative approach, and allows you to get feedback from the product team and the customers earlier in the process and improve them.
+
+In terms of inconsistencies, this will create vertical inconsistencies, consistences between the pages of the same product
+
+This approach can be seem slower than the previous one, because the product teams not involved in the page to migrate still using the legacy design system, but **the speed is exponentially increased**, as in each migration you will have more and more components, patterns and workflows to use in the next migration.
+
+This approach also creates an **"envy" effect**, as other product teams see the **benefits of the new design system fully applied** and push to migrate their own pages and workflows.
+
+> This is the approach my team used in a previous company I worked for, and it was very successful, as we were able to migrate the design system (and the frontend framework) gradually, getting feedback from the product teams and the customers, and creating a more consistent user experience across the product, with a smaller team, freeing up those developers to work on product features.
+
+### Being strict with the components usage
 
 
 
